[package]
name = "fileforce"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["multipart"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
mime_guess = "2.0.5"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
